force-app/main/default/objects/TechIP_Transaction_Litigation__c/TechIP_Transaction_Litigation__c.object-meta.xml
<CustomObject>
    <label>TechIP Transaction Litigation</label>
    <nameField>
        <displayFormat>TL-{000000}</displayFormat>
        <label>TechIP Transaction Litigation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TechIP Transaction Litigations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>