force-app/main/default/objects/TechIP_Transaction_Litigation__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <formula>Litigation__r.Case__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case #</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>