force-app/main/default/objects/TechIP_Transaction_Litigation__c/fields/Defendant__c.field-meta.xml
<CustomField>
    <fullName>Defendant__c</fullName>
    <formula>Litigation__r.Defendant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defendant</label>
    <type>Text</type>
</CustomField>