force-app/main/default/objects/TechIP_Transaction_Litigation__c/fields/Filed__c.field-meta.xml
<CustomField>
    <fullName>Filed__c</fullName>
    <formula>Litigation__r.Filed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filed</label>
    <type>Date</type>
</CustomField>