force-app/main/default/objects/TechIP_Transaction_Litigation__c/fields/Litigation__c.field-meta.xml
<CustomField>
    <fullName>Litigation__c</fullName>
    <label>Litigation Style</label>
    <referenceTo>Litigation__c</referenceTo>
    <relationshipName>TIP_Transaction_Litigations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>