force-app/main/default/objects/TechIP_Transaction_Litigation__c/fields/Litigation_Style__c.field-meta.xml
<CustomField>
    <fullName>Litigation_Style__c</fullName>
    <formula>Litigation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Litigation Style</label>
    <type>Text</type>
</CustomField>